# Cargo.toml complet
[package]
name = "idle_toast"
version = "0.1.19"
edition = "2021"
publish = false

[dependencies]
eframe = { version = "0.29", default-features = false, features = ["wgpu", "default_fonts"] }
rdev = "0.5"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
crossbeam-channel = "0.5"
windows = { version = "0.58", features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Graphics_Gdi",
  "Win32_Foundation",
  "Win32_Media_Audio",
  "Win32_System_LibraryLoader",
] }

[profile.release]
lto = "thin"
codegen-units = 1
opt-level = 3
